[package]
name = "atsamd-usb-host"
description = "usb-host driver support for Atmel SAMD* microcontrollers."
version = "0.1.0"
authors = ["Brian Cully <bjc@kublai.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["usb", "usb-host", "hal", "peripheral"]
repository = "https://github.com/bjc/atsamd-21-host.git"
readme = "README.md"

[dependencies]
usb-host = "~0.1"
starb = "~0.2"
log = "~0.4"
embedded-hal = "~0.2"
atsamd-hal = "~0.6"

[dev-dependencies.atsamd-hal]
version = "~0.6"
features = ["samd21e18a"]

# Need to re-export features from atsamd-hal. If there were a
# compelling reason to merge this into there, this is it.
[features]
samd21g18a = ["atsamd-hal/samd21g18a"]
samd21e18a = ["atsamd-hal/samd21e18a"]
samd51 = [] # Convenience feature for shared configuration of samd51 chips.
samd51g19a = ["atsamd-hal/samd51g19a"]
samd51j19a = ["atsamd-hal/samd51j19a"]
samd51j20a = ["atsamd-hal/samd51j20a"]
