[package]
name = "atsamd-usb-host"
description = "usb-host driver support for Atmel SAMD* microcontrollers."
version = "0.2.0"
authors = ["Brian Cully <bjc@kublai.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["usb", "usb-host", "hal", "peripheral"]
repository = "https://github.com/bjc/atsamd-21-host.git"
readme = "README.md"

[dependencies]
usb-host = { path = "../usb-host" }
heapless = "0.7"
embedded-hal = "0.2"
atsamd-hal = "0.14"

defmt = { version = "0.3" }
#log = { version = "0.4", optional = true }

[dev-dependencies.atsamd-hal]
version = "0.14"
features = ["samd21e"]

#[dev-dependencies.defmt]
#version = "0.4"

# Need to re-export features from atsamd-hal. If there were a
# compelling reason to merge this into there, this is it.
[features]
defmt = []
log = []
samd11c = ["atsamd-hal/samd11c"]
samd21e = ["atsamd-hal/samd21e"]
samd21g = ["atsamd-hal/samd21g"]
samd21j = ["atsamd-hal/samd21j"]
samd51g = ["atsamd-hal/samd51g"]
samd51j = ["atsamd-hal/samd51j"]
samd51n = ["atsamd-hal/samd51n"]
samd51p = ["atsamd-hal/samd51p"]
same51g = ["atsamd-hal/same51g"]
same51j = ["atsamd-hal/same51j"]
same51n = ["atsamd-hal/same51n"]
same53j = ["atsamd-hal/same53j"]
same53n = ["atsamd-hal/same53n"]
same54n = ["atsamd-hal/same54n"]
same54p = ["atsamd-hal/same54p"]
